# ButterflyAPI

./: .dockerignore  .env  .gitignore  Cargo.toml  diesel.toml  dockerfile
kube_manifest/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
migrations/2025-09-09-082304_users/: down.sql  up.sql
migrations/2025-11-25-101538-0000_setup1/: down.sql  up.sql
migrations/2025-11-27-094816-0000_steuptokenrenew/: down.sql  up.sql
migrations/2025-11-27-120558-0000_setupobjecttype/: down.sql  up.sql
src/: auth.rs  email.rs  hash.rs  instances.rs  main.rs  models.rs  objects.rs  rate_limit.rs  schema.rs  search.rs  tokens.rs  user_websocket.rs  users.rs
