[package]
name = "ButterflyAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.118.0"
axum = {version = "0.8.4", features = ["macros"]}
bb8 = "0.9.1"
bytes = "1.11.0"
constcat = "0.6.1"
diesel = {version = "2.2.12", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.0", features = ["postgres", "bb8", "pool"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "serde"]}
