[package]
name = "ButterflyAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.120.0"
axum = {version = "0.8.8", features = ["macros", "ws"]}
bb8 = "0.9.1"
bytes = "1.11.0"
constcat = "0.6.1"
diesel = {version = "2.3.6", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8", "pool"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
lettre = "0.11.19"
lettre_email = "0.9.4"
rand_core = "0.9.5"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"]}
